# export_client

./: README.md  export_client_cli.py  fastapi_test.py  main.py  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
docs/: python_setup.md.html
example/test/: isamples_export_geo.parquet  manifest.json  stac.json
isamples_export_client/: __main__.py  duckdb_utilities.py  export_client.py  fastapi_server.py  geoparquet_utilities.py
isamples_export_client/ui/: data_source.html  ds_view.html  index.html  search_isb.html
isamples_export_client/ui/_file/: styles.9124d518.css
isamples_export_client/ui/_import/: isclib.e38a39a7.js  sample.2f6689b3.js  sample.7389c5f6.js  sample.da41fe32.js
isamples_export_client/ui/_npm/@duckdb/duckdb-wasm@1.28.1-dev195.0/: _esm.js
isamples_export_client/ui/_npm/@radiantearth/stac-migrate@1.6.0/: _esm.js
isamples_export_client/ui/_npm/@streamparser/json@0.0.21/: _esm.js
isamples_export_client/ui/_npm/apache-arrow@16.1.0/: _esm.js
isamples_export_client/ui/_npm/compare-versions@3.6.0/: _esm.js
isamples_export_client/ui/_npm/leaflet-spin@1.1.2/: _esm.js
isamples_export_client/ui/_npm/leaflet.glify@3.2.0/: _esm.js
isamples_export_client/ui/_npm/leaflet@1.7.1/: _esm.js
isamples_export_client/ui/_npm/linkify-it@5.0.0/: _esm.js
isamples_export_client/ui/_npm/markdown-it@14.1.0/: _esm.js
isamples_export_client/ui/_npm/mdurl@2.0.0/: _esm.js
isamples_export_client/ui/_npm/punycode.js@2.3.1/: _esm.js
isamples_export_client/ui/_npm/spin.js@2.3.2/: _esm.js
isamples_export_client/ui/_npm/uc.micro@2.1.0/: _esm.js
isamples_export_client/ui/_npm/urijs@1.19.11/: _esm.js
isamples_export_client/ui/_observablehq/: client.js
isamples_export_client/ui/_observablehq/stdlib/: duckdb.js
scripts/: transform_json_schema_to_stac_metadata.py
tests/: test_duckdb.py  test_export_client.py  test_geoparquet.py  test_python.py  test_stac.py
ui/: ds_view.html  index.html
ui/_import/: sample.b3259203.js  sample.c1d4314d.js
ui/_npm/entities@4.5.0/: _esm.js
ui/_npm/stac-js@0.0.9/: _esm.js
ui_src/: README.md  npm.js.patch  observablehq.config.js  package-lock.json
ui_src/src/: data_source.md  ds_view.md  index.md  isclib.js  search_isb.md
