[tool.poetry]
name = "iSamples Export Client"
version = "0.1.0"
description = "An export client for the iSamples export service."
authors = ["Danny Mandel <danny.mandel@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [
    { include = "isamples_export_client"},
]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
requests = "^2.31.0"
duckdb = "^0.10.2"
pandas = "^2.2.2"
geopandas = "^0.14.4"
geoarrow-pyarrow = "^0.1.2"
geoarrow-pandas = "^0.1.1"
stac-validator = "^3.3.2"
fastapi = "^0.111.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.5.1"
pytest = "^7.4.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
